--- a/contact.htm
+++ b/contact.htm
@@ -941,7 +941,7 @@ margin-top:-15px;
 .contact-tabs {
     position: relative;     
     top: -140px;
-    right: -68px;
+    right: -78px;
     gap: 40px;
   
 }.contact-tabs a{
@@ -973,8 +973,18 @@ margin-top:-15px;
     justify-content: center;
     gap: 20px;
     padding: 20px;
-    margin-top:-80px;
+    margin-top:-50px;
     margin-left:-40px;
+}.blue-linesCont {
+  display: block;
+  width: 100%;
+  height: 4px;
+  border: none;
+  background-color: #0056D2;
+  margin: 40px auto; 
+  clear: both; 
+  margin-top:-200px;
+  margin-left:-20px;
 }
    
 }
@@ -1011,7 +1021,7 @@ margin-top:-15px;
 }.contact-tabs {
     position: relative;     
     top: -140px;
-    right: -68px;
+    right: -78px;
     gap: 40px;
   
 }.contact-tabs a{
@@ -1033,8 +1043,18 @@ margin-top:-15px;
     justify-content: center;
     gap: 20px;
     padding: 20px;
-    margin-top:-80px;
+    margin-top:-50px;
     margin-left:-40px;
+}.blue-linesCont {
+  display: block;
+  width: 100%;
+  height: 4px;
+  border: none;
+  background-color: #0056D2;
+  margin: 40px auto; 
+  clear: both; 
+  margin-top:-200px;
+  margin-left:-20px;
 }
 
 }
