--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,16 @@ font-size: 16px;
   margin-left:-50px;
 }.accreditations h2{
   font-size: 20px;
-} 
+} .blue-lines {
+  display: block;
+  width: 100%;
+  height: 4px;
+  border: none;
+  background-color: #0056D2;
+  margin: 40px auto; 
+  clear: both; 
+  margin-top:-200px;
+}
 }
 @media (max-width: 480px) {
   body {
@@ -2104,6 +2113,15 @@ font-size: 16px;
   margin-left:-50px;
 }.accreditations h2{
   font-size: 20px;
+}.blue-lines {
+  display: block;
+  width: 100%;
+  height: 4px;
+  border: none;
+  background-color: #0056D2;
+  margin: 40px auto; 
+  clear: both; 
+  margin-top:-200px;
 }
 
 
